output_9.2.148/enum_quda_fortran.h.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/9.2.148'
/tmp/enum_quda_fortran.h-7ca4f8.hip:84:1: error: expected unqualified-id
! Types used in QudaInvertParam
^
1 error generated when compiling for host.
Error while processing /tmp/enum_quda_fortran.h-7ca4f8.hip.

[HIPIFY] info: file './quda/include/enum_quda_fortran.h' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 0
  UNCONVERTED refs count: 0
  CONVERSION %: 0
  REPLACED bytes: 0
  TOTAL bytes: 16290
  CHANGED lines of code: 1
  TOTAL lines of code: 468
  CODE CHANGED (in bytes) %: 0
  CODE CHANGED (in lines) %: 0
  TIME ELAPSED s: 0.19
